Bug #5888 Triggers with nonexistent columns cause packets out of order
Submitted: 5 Oct 2004 2:55 Modified: 24 Nov 2004 11:11
Reporter: Peter Gulutzan
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.0.2-alpha-debug OS:Linux (SuSE 8.2)
Assigned to: Dmitri Lenev Target Version:

[5 Oct 2004 2:55] Peter Gulutzan
Description:
I get "packets out of order" if I try to drop a trigger which refers 
to a column which does not exist. 

How to repeat:
mysql> create table x3 (col1 int, col2 int);// 
Query OK, 0 rows affected (0.04 sec) 
 
mysql> create trigger x3_bi before insert on x3 for each row set new.col1 = new.col +
1;// 
Query OK, 0 rows affected (0.00 sec) 
 
mysql> create trigger x3_ai after insert on x3 for each row set @x = @x + 1;// 
ERROR 1054 (42S22): Unknown column 'col' in 'NEW' 
mysql> drop trigger x3.x3bi;// 
Packets out of order (Found: 2, expected 1) 
ERROR 2013 (HY000): Lost connection to MySQL server during query
[5 Oct 2004 11:13] Victoria Reznichenko
Verified with 5.0.2-alpha-debug-log
[24 Nov 2004 11:11] Dmitri Lenev
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

ChangeSet 1.1684 2004/11/24 12:24:02 dlenev@brandersnatch.localdomain
  Fix for bug #5888 "Triggers with nonexistent columns cause packets
  out of order". (final version)